--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/serve-static": "^4.0.0",
+        "@nestjs/swagger": "^7.1.17",
         "@nestjs/typeorm": "^10.0.1",
         "@types/bcrypt": "^5.0.2",
         "@types/lodash": "^4.14.202",
