--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/websockets": "^10.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.14.202",
     "@types/multer": "^1.4.11",
